# tomos

./: .gitignore  BUGs.txt  Changelog.md  README.md  TODO.txt  install.txt  playground.py  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt
.github/workflows/: python-app.yml
ayed2_examples/: array_medium.ayed2  array_pointers.ayed2  array_simple.ayed2  int_asignations.ayed2  mixed_basic_types_simple.ayed2  types_simple.ayed
demo/ayed2_examples/: if_while.ayed2  minimal_requeriment.c  mixed_basic_types_simple.ayed2  types_tuples.ayed
demo/bubble_sort/: Makefile  setup.ayed  sort.ayed
demo/double_linked_list/: .env  Makefile  append.ayed  insert_at.ayed  remove_first_data.ayed  setup.ayed  tail.ayed  tomos_ui.toml
demo/linked_list/: Makefile  append.ayed  insert_at.ayed  remove_first_data.ayed  remove_not_found.ayed  setup.ayed  tail.ayed  tomos_ui.toml
tests/: test_parsing.py
tests/ayed2/: factories.py  test_eval_expressions.py  test_eval_sentences.py  test_eval_state.py  test_integration.py  test_parsing.py  test_types.py
tests/ayed2/factories/: expressions.py  sentences.py  state.py
tests/ayed2/integrations/: array_index_error.ayed2  array_medium.ayed2  array_pointers.ayed2  array_simple.ayed2  arrow_field_accessing.ayed2  editing_for_loop_var_fails.ayed2  for_loop.ayed2  if_else_simple.ayed2  (+7 more)
tomos/: __init__.py  exceptions.py  visit.py
tomos/animation/: show_code.py
tomos/ayed2/: interpreter.py  parser.py
tomos/base_classes/: dataclasses.py
tomos/parser/: ayed2.py
tomos/ui/: cli.py  patch_moviepy.py  playground.py
(+48 files in other folders)
