[tool.poetry]
name = "tomos"
version = "0.1.3"
description = "Code Tomogrph for Ayed2"
authors = ["Javier Mansilla <javimansilla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.2.2"
docopt = "^0.6.2"
pygments = "2.18.0"
pygments-ayed2 = "0.0.7"
skitso = "^0.1.2"
prettytable = "^3.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
